  [mathias.leimgruber]

- Use Batch.fromPagenumber.
  [mathias.leimgruber]


3.3.4 (2013-01-25)
------------------

- Add INoExtJS marker interface disabling extjs when provided
  by the tabbview and the tab
  [mathias.leimgruber]


3.3.3 (2013-01-21)
------------------

- Add default dynamic batching form to batching template. #11
  [jone]

- Fix javascript order in ExtJS profile.
  [jone]
- Implement grid config profiles for ExtJS.
  Can be enabled with `grid_config_profiles = False` on a listing test.
  [jone]

- ExtJS: Allow providing static HTML before update(), which is not
  overridden as long it is not managed by default.
  [jone]

- ExtJS: Remove overriding sortable flag with grid state. The column
  definition should be used always.
  [jone]

- Delegate pagination to batching to table if a table exists.
  This allows faster reload when using ExtJS tables.
  [jone]

- Add extjs filter support.
  Define a ``IExtFilter`` object as ``filter`` in your column defition
  and install the ``grid-filter`` GS profile of ``collective.js.extjs``.
  [jone]

- Fix javascript order in ExtJS profile.
  [jone]

- Fix IE7 element positioning issue by force repainting.
  [jone]

- Do not hide the right portlet column.
  [Julian Infanger]

- Fix failing test introduced by the "anonymous access" change.
  Also test extjs configuration specifically anonymous.
  [jone]


3.3.2 (2012-10-26)
------------------

- Basic support for using the tabbed view anonymously.
  ExtJS is not supported and automatically disabled for anonymous users.
  [jone]

- Adjust javscripts: Use $ instead of deprecated jq.
  [phgross]

- Added condition for not showing uploadbox if text is dragged on the website.
  [Julian Infanger, jone]

- Use first tabbedview by default when accessing tabbed view anonymously.
  [jone]


3.3.1 (2012-10-16)
------------------

- Cleanup readme
  [mathias.leimgruber]


3.3 (2012-10-16)
----------------

- Load upload function only on tabbedview.
  [mathias.leimgruber]
