@@ -134,6 +134,11 @@ Changelog
 
 - Fix javascript order in ExtJS profile.
   [jone]
+
+- ExtJS: Disable sorting when grouping and sort by the grouping column.
+  This is to prevent multiple instances.
+  [jone]
+
 - Implement grid config profiles for ExtJS.
   Can be enabled with `grid_config_profiles = False` on a listing test.
   [jone]
